--- a/Aaron.Tests/Aaron.Tests.csproj
+++ b/Aaron.Tests/Aaron.Tests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Aaron.Core\Aaron.Core.csproj" />
+  </ItemGroup>
+
 </Project>
